Src6.4.2/y.output
   0  $accept : program $end

   1  program : units

   2  units : unit
   3        | units unit

   4  unit : proc
   5       | init
   6       | claim
   7       | ltl
   8       | events
   9       | one_decl
  10       | utype
  11       | c_fcts
  12       | ns
  13       | semi
  14       | error

  15  l_par : '('

  16  r_par : ')'

  17  $$1 :

  18  $$2 :

  19  proc : inst proctype NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body

  20  proctype : PROCTYPE
  21           | D_PROCTYPE

  22  inst :
  23       | ACTIVE
  24       | ACTIVE '[' const_expr ']'
  25       | ACTIVE '[' NAME ']'

  26  $$3 :

  27  init : INIT $$3 Opt_priority body

  28  $$4 :

  29  ltl : LTL optname2 $$4 ltl_body

  30  ltl_body : '{' full_expr OS '}'
  31           | error

  32  $$5 :

  33  claim : CLAIM optname $$5 body

  34  optname :
  35          | NAME

  36  optname2 :
  37           | NAME

  38  $$6 :

  39  events : TRACE $$6 body

  40  $$7 :

  41  utype : TYPEDEF NAME '{' $$7 decl_lst '}'

  42  nm : NAME
  43     | INAME

  44  $$8 :

  45  ns : INLINE nm l_par $$8 args r_par

  46  c_fcts : ccode
  47         | cstate

  48  cstate : C_STATE STRING STRING
  49         | C_TRACK STRING STRING
  50         | C_STATE STRING STRING STRING
  51         | C_TRACK STRING STRING STRING

  52  ccode : C_CODE
  53        | C_DECL

  54  cexpr : C_EXPR

  55  $$9 :

  56  $$10 :

  57  body : '{' $$9 sequence OS $$10 '}'

  58  sequence : step
  59           | sequence MS step

  60  step : one_decl
  61       | XU vref_lst
  62       | NAME ':' one_decl
  63       | NAME ':' XU
  64       | stmnt

  65  $$11 :

  66  step : stmnt UNLESS $$11 stmnt

  67  vis :
  68      | HIDDEN
  69      | SHOW
  70      | ISLOCAL

  71  asgn :
  72       | ASGN

  73  one_decl : vis TYPE var_list
  74           | vis UNAME var_list
  75           | vis TYPE asgn '{' nlst '}'

  76  decl_lst : one_decl
  77           | one_decl SEMI decl_lst

  78  decl :
  79       | decl_lst

  80  vref_lst : varref
  81           | varref ',' vref_lst

  82  var_list : ivar
  83           | ivar ',' var_list

  84  c_list : CONST
  85         | CONST ',' c_list

  86  ivar : vardcl
  87       | vardcl ASGN '{' c_list '}'
  88       | vardcl ASGN expr
  89       | vardcl ASGN ch_init

  90  ch_init : '[' const_expr ']' OF '{' typ_list '}'

  91  vardcl : NAME
  92         | NAME ':' CONST
  93         | NAME '[' const_expr ']'

  94  varref : cmpnd

  95  pfld : NAME

  96  $$12 :

  97  pfld : NAME $$12 '[' expr ']'

  98  $$13 :

  99  cmpnd : pfld $$13 sfld

 100  sfld :
 101       | '.' cmpnd

 102  stmnt : Special
 103        | Stmnt

 104  $$14 :

 105  for_pre : FOR l_par $$14 varref

 106  for_post : '{' sequence OS '}'

 107  $$15 :

 108  Special : varref RCV $$15 rargs

 109  $$16 :

 110  Special : varref SND $$16 margs

 111  $$17 :

 112  Special : for_pre ':' expr DOTDOT expr r_par $$17 for_post

 113  $$18 :

 114  Special : for_pre IN varref r_par $$18 for_post
 115          | SELECT l_par varref ':' expr DOTDOT expr r_par
 116          | IF options FI

 117  $$19 :

 118  Special : DO $$19 options OD
 119          | BREAK
 120          | GOTO NAME
 121          | NAME ':' stmnt
 122          | NAME ':'
 123          | error

 124  Stmnt : varref ASGN full_expr
 125        | varref INCR
 126        | varref DECR
 127        | SET_P l_par two_args r_par

 128  $$20 :

 129  Stmnt : PRINT l_par STRING $$20 prargs r_par
 130        | PRINTM l_par varref r_par
 131        | PRINTM l_par CONST r_par
 132        | ASSERT full_expr
 133        | ccode

 134  $$21 :

 135  Stmnt : varref R_RCV $$21 rargs

 136  $$22 :

 137  Stmnt : varref RCV $$22 LT rargs GT

 138  $$23 :

 139  Stmnt : varref R_RCV $$23 LT rargs GT

 140  $$24 :

 141  Stmnt : varref O_SND $$24 margs
 142        | full_expr
 143        | ELSE

 144  $$25 :

 145  Stmnt : ATOMIC '{' $$25 sequence OS '}'

 146  $$26 :

 147  Stmnt : D_STEP '{' $$26 sequence OS '}'

 148  $$27 :

 149  Stmnt : '{' $$27 sequence OS '}'

 150  $$28 :

 151  $$29 :

 152  Stmnt : INAME $$28 l_par args r_par $$29 Stmnt

 153  $$30 :

 154  $$31 :

 155  Stmnt : varref ASGN INAME $$30 l_par args r_par $$31 Stmnt
 156        | RETURN full_expr

 157  options : option
 158          | option options

 159  $$32 :

 160  option : SEP $$32 sequence OS

 161  OS :
 162     | semi

 163  semi : SEMI
 164       | ARROW

 165  MS : semi
 166     | MS semi

 167  aname : NAME
 168        | PNAME

 169  const_expr : CONST
 170             | '-' const_expr
 171             | l_par const_expr r_par
 172             | const_expr '+' const_expr
 173             | const_expr '-' const_expr
 174             | const_expr '*' const_expr
 175             | const_expr '/' const_expr
 176             | const_expr '%' const_expr

 177  expr : l_par expr r_par
 178       | expr '+' expr
 179       | expr '-' expr
 180       | expr '*' expr
 181       | expr '/' expr
 182       | expr '%' expr
 183       | expr '&' expr
 184       | expr '^' expr
 185       | expr '|' expr
 186       | expr GT expr
 187       | expr LT expr
 188       | expr GE expr
 189       | expr LE expr
 190       | expr EQ expr
 191       | expr NE expr
 192       | expr AND expr
 193       | expr OR expr
 194       | expr LSHIFT expr
 195       | expr RSHIFT expr
 196       | '~' expr
 197       | '-' expr
 198       | SND expr
 199       | l_par expr ARROW expr ':' expr r_par

 200  $$33 :

 201  expr : RUN aname $$33 l_par args r_par Opt_priority
 202       | LEN l_par varref r_par
 203       | ENABLED l_par expr r_par
 204       | GET_P l_par expr r_par

 205  $$34 :

 206  expr : varref RCV $$34 '[' rargs ']'

 207  $$35 :

 208  expr : varref R_RCV $$35 '[' rargs ']'
 209       | varref
 210       | cexpr
 211       | CONST
 212       | TIMEOUT
 213       | NONPROGRESS
 214       | PC_VAL l_par expr r_par
 215       | PNAME '[' expr ']' '@' NAME
 216       | PNAME '[' expr ']' ':' pfld
 217       | PNAME '@' NAME
 218       | PNAME ':' pfld
 219       | ltl_expr

 220  Opt_priority :
 221               | PRIORITY CONST

 222  full_expr : expr
 223            | Expr

 224  ltl_expr : expr UNTIL expr
 225           | expr RELEASE expr
 226           | expr WEAK_UNTIL expr
 227           | expr IMPLIES expr
 228           | expr EQUIV expr
 229           | NEXT expr
 230           | ALWAYS expr
 231           | EVENTUALLY expr

 232  Expr : Probe
 233       | l_par Expr r_par
 234       | Expr AND Expr
 235       | Expr AND expr
 236       | expr AND Expr
 237       | Expr OR Expr
 238       | Expr OR expr
 239       | expr OR Expr

 240  Probe : FULL l_par varref r_par
 241        | NFULL l_par varref r_par
 242        | EMPTY l_par varref r_par
 243        | NEMPTY l_par varref r_par

 244  Opt_enabler :
 245              | PROVIDED l_par full_expr r_par
 246              | PROVIDED error

 247  basetype : TYPE
 248           | UNAME
 249           | error

 250  typ_list : basetype
 251           | basetype ',' typ_list

 252  two_args : expr ',' expr

 253  args :
 254       | arg

 255  prargs :
 256         | ',' arg

 257  margs : arg
 258        | expr l_par arg r_par

 259  arg : expr
 260      | expr ',' arg

 261  rarg : varref
 262       | EVAL l_par expr r_par
 263       | CONST
 264       | '-' CONST

 265  rargs : rarg
 266        | rarg ',' rargs
 267        | rarg l_par rargs r_par
 268        | l_par rargs r_par

 269  nlst : NAME
 270       | nlst NAME
 271       | nlst ','

state 0
	$accept : . program $end  (0)
	inst : .  (22)
	vis : .  (67)

	error  shift 1
	C_CODE  shift 2
	C_DECL  shift 3
	C_STATE  shift 4
	C_TRACK  shift 5
	TYPEDEF  shift 6
	INLINE  shift 7
	SEMI  shift 8
	ARROW  shift 9
	ACTIVE  shift 10
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	CLAIM  shift 14
	TRACE  shift 15
	INIT  shift 16
	LTL  shift 17
	PROCTYPE  reduce 22
	D_PROCTYPE  reduce 22
	TYPE  reduce 67
	UNAME  reduce 67

	program  goto 18
	units  goto 19
	unit  goto 20
	proc  goto 21
	init  goto 22
	claim  goto 23
	ltl  goto 24
	events  goto 25
	one_decl  goto 26
	utype  goto 27
	c_fcts  goto 28
	ns  goto 29
	semi  goto 30
	inst  goto 31
	ccode  goto 32
	cstate  goto 33
	vis  goto 34


state 1
	unit : error .  (14)

	.  reduce 14


state 2
	ccode : C_CODE .  (52)

	.  reduce 52


state 3
	ccode : C_DECL .  (53)

	.  reduce 53


state 4
	cstate : C_STATE . STRING STRING  (48)
	cstate : C_STATE . STRING STRING STRING  (50)

	STRING  shift 35
	.  error


state 5
	cstate : C_TRACK . STRING STRING  (49)
	cstate : C_TRACK . STRING STRING STRING  (51)

	STRING  shift 36
	.  error


state 6
	utype : TYPEDEF . NAME '{' $$7 decl_lst '}'  (41)

	NAME  shift 37
	.  error


state 7
	ns : INLINE . nm l_par $$8 args r_par  (45)

	NAME  shift 38
	INAME  shift 39
	.  error

	nm  goto 40


state 8
	semi : SEMI .  (163)

	.  reduce 163


state 9
	semi : ARROW .  (164)

	.  reduce 164


state 10
	inst : ACTIVE .  (23)
	inst : ACTIVE . '[' const_expr ']'  (24)
	inst : ACTIVE . '[' NAME ']'  (25)

	'['  shift 41
	PROCTYPE  reduce 23
	D_PROCTYPE  reduce 23


state 11
	vis : HIDDEN .  (68)

	.  reduce 68


state 12
	vis : SHOW .  (69)

	.  reduce 69


state 13
	vis : ISLOCAL .  (70)

	.  reduce 70


state 14
	claim : CLAIM . optname $$5 body  (33)
	optname : .  (34)

	NAME  shift 42
	'{'  reduce 34

	optname  goto 43


state 15
	events : TRACE . $$6 body  (39)
	$$6 : .  (38)

	.  reduce 38

	$$6  goto 44


state 16
	init : INIT . $$3 Opt_priority body  (27)
	$$3 : .  (26)

	.  reduce 26

	$$3  goto 45


state 17
	ltl : LTL . optname2 $$4 ltl_body  (29)
	optname2 : .  (36)

	NAME  shift 46
	error  reduce 36
	'{'  reduce 36

	optname2  goto 47


state 18
	$accept : program . $end  (0)

	$end  accept


state 19
	program : units .  (1)
	units : units . unit  (3)
	inst : .  (22)
	vis : .  (67)

	error  shift 1
	C_CODE  shift 2
	C_DECL  shift 3
	C_STATE  shift 4
	C_TRACK  shift 5
	TYPEDEF  shift 6
	INLINE  shift 7
	SEMI  shift 8
	ARROW  shift 9
	ACTIVE  shift 10
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	CLAIM  shift 14
	TRACE  shift 15
	INIT  shift 16
	LTL  shift 17
	$end  reduce 1
	PROCTYPE  reduce 22
	D_PROCTYPE  reduce 22
	TYPE  reduce 67
	UNAME  reduce 67

	unit  goto 48
	proc  goto 21
	init  goto 22
	claim  goto 23
	ltl  goto 24
	events  goto 25
	one_decl  goto 26
	utype  goto 27
	c_fcts  goto 28
	ns  goto 29
	semi  goto 30
	inst  goto 31
	ccode  goto 32
	cstate  goto 33
	vis  goto 34


state 20
	units : unit .  (2)

	.  reduce 2


state 21
	unit : proc .  (4)

	.  reduce 4


state 22
	unit : init .  (5)

	.  reduce 5


state 23
	unit : claim .  (6)

	.  reduce 6


state 24
	unit : ltl .  (7)

	.  reduce 7


state 25
	unit : events .  (8)

	.  reduce 8


state 26
	unit : one_decl .  (9)

	.  reduce 9


state 27
	unit : utype .  (10)

	.  reduce 10


state 28
	unit : c_fcts .  (11)

	.  reduce 11


state 29
	unit : ns .  (12)

	.  reduce 12


state 30
	unit : semi .  (13)

	.  reduce 13


state 31
	proc : inst . proctype NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	PROCTYPE  shift 49
	D_PROCTYPE  shift 50
	.  error

	proctype  goto 51


state 32
	c_fcts : ccode .  (46)

	.  reduce 46


state 33
	c_fcts : cstate .  (47)

	.  reduce 47


state 34
	one_decl : vis . TYPE var_list  (73)
	one_decl : vis . UNAME var_list  (74)
	one_decl : vis . TYPE asgn '{' nlst '}'  (75)

	TYPE  shift 52
	UNAME  shift 53
	.  error


state 35
	cstate : C_STATE STRING . STRING  (48)
	cstate : C_STATE STRING . STRING STRING  (50)

	STRING  shift 54
	.  error


state 36
	cstate : C_TRACK STRING . STRING  (49)
	cstate : C_TRACK STRING . STRING STRING  (51)

	STRING  shift 55
	.  error


state 37
	utype : TYPEDEF NAME . '{' $$7 decl_lst '}'  (41)

	'{'  shift 56
	.  error


state 38
	nm : NAME .  (42)

	.  reduce 42


state 39
	nm : INAME .  (43)

	.  reduce 43


state 40
	ns : INLINE nm . l_par $$8 args r_par  (45)

	'('  shift 57
	.  error

	l_par  goto 58


state 41
	inst : ACTIVE '[' . const_expr ']'  (24)
	inst : ACTIVE '[' . NAME ']'  (25)

	CONST  shift 59
	NAME  shift 60
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 63


state 42
	optname : NAME .  (35)

	.  reduce 35


state 43
	claim : CLAIM optname . $$5 body  (33)
	$$5 : .  (32)

	.  reduce 32

	$$5  goto 64


state 44
	events : TRACE $$6 . body  (39)

	'{'  shift 65
	.  error

	body  goto 66


state 45
	init : INIT $$3 . Opt_priority body  (27)
	Opt_priority : .  (220)

	PRIORITY  shift 67
	'{'  reduce 220

	Opt_priority  goto 68


state 46
	optname2 : NAME .  (37)

	.  reduce 37


state 47
	ltl : LTL optname2 . $$4 ltl_body  (29)
	$$4 : .  (28)

	.  reduce 28

	$$4  goto 69


state 48
	units : units unit .  (3)

	.  reduce 3


state 49
	proctype : PROCTYPE .  (20)

	.  reduce 20


state 50
	proctype : D_PROCTYPE .  (21)

	.  reduce 21


state 51
	proc : inst proctype . NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	NAME  shift 70
	.  error


state 52
	one_decl : vis TYPE . var_list  (73)
	one_decl : vis TYPE . asgn '{' nlst '}'  (75)
	asgn : .  (71)

	NAME  shift 71
	ASGN  shift 72
	'{'  reduce 71

	asgn  goto 73
	var_list  goto 74
	ivar  goto 75
	vardcl  goto 76


state 53
	one_decl : vis UNAME . var_list  (74)

	NAME  shift 71
	.  error

	var_list  goto 77
	ivar  goto 75
	vardcl  goto 76


state 54
	cstate : C_STATE STRING STRING .  (48)
	cstate : C_STATE STRING STRING . STRING  (50)

	STRING  shift 78
	$end  reduce 48
	error  reduce 48
	C_CODE  reduce 48
	C_DECL  reduce 48
	C_STATE  reduce 48
	C_TRACK  reduce 48
	TYPEDEF  reduce 48
	INLINE  reduce 48
	SEMI  reduce 48
	ARROW  reduce 48
	ACTIVE  reduce 48
	PROCTYPE  reduce 48
	D_PROCTYPE  reduce 48
	HIDDEN  reduce 48
	SHOW  reduce 48
	ISLOCAL  reduce 48
	TYPE  reduce 48
	UNAME  reduce 48
	CLAIM  reduce 48
	TRACE  reduce 48
	INIT  reduce 48
	LTL  reduce 48


state 55
	cstate : C_TRACK STRING STRING .  (49)
	cstate : C_TRACK STRING STRING . STRING  (51)

	STRING  shift 79
	$end  reduce 49
	error  reduce 49
	C_CODE  reduce 49
	C_DECL  reduce 49
	C_STATE  reduce 49
	C_TRACK  reduce 49
	TYPEDEF  reduce 49
	INLINE  reduce 49
	SEMI  reduce 49
	ARROW  reduce 49
	ACTIVE  reduce 49
	PROCTYPE  reduce 49
	D_PROCTYPE  reduce 49
	HIDDEN  reduce 49
	SHOW  reduce 49
	ISLOCAL  reduce 49
	TYPE  reduce 49
	UNAME  reduce 49
	CLAIM  reduce 49
	TRACE  reduce 49
	INIT  reduce 49
	LTL  reduce 49


state 56
	utype : TYPEDEF NAME '{' . $$7 decl_lst '}'  (41)
	$$7 : .  (40)

	.  reduce 40

	$$7  goto 80


state 57
	l_par : '(' .  (15)

	.  reduce 15


state 58
	ns : INLINE nm l_par . $$8 args r_par  (45)
	$$8 : .  (44)

	.  reduce 44

	$$8  goto 81


state 59
	const_expr : CONST .  (169)

	.  reduce 169


state 60
	inst : ACTIVE '[' NAME . ']'  (25)

	']'  shift 82
	.  error


state 61
	const_expr : '-' . const_expr  (170)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 83


state 62
	const_expr : l_par . const_expr r_par  (171)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 84


state 63
	inst : ACTIVE '[' const_expr . ']'  (24)
	const_expr : const_expr . '+' const_expr  (172)
	const_expr : const_expr . '-' const_expr  (173)
	const_expr : const_expr . '*' const_expr  (174)
	const_expr : const_expr . '/' const_expr  (175)
	const_expr : const_expr . '%' const_expr  (176)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	']'  shift 90
	.  error


state 64
	claim : CLAIM optname $$5 . body  (33)

	'{'  shift 65
	.  error

	body  goto 91


state 65
	body : '{' . $$9 sequence OS $$10 '}'  (57)
	$$9 : .  (55)

	.  reduce 55

	$$9  goto 92


state 66
	events : TRACE $$6 body .  (39)

	.  reduce 39


state 67
	Opt_priority : PRIORITY . CONST  (221)

	CONST  shift 93
	.  error


state 68
	init : INIT $$3 Opt_priority . body  (27)

	'{'  shift 65
	.  error

	body  goto 94


state 69
	ltl : LTL optname2 $$4 . ltl_body  (29)

	error  shift 95
	'{'  shift 96
	.  error

	ltl_body  goto 97


state 70
	proc : inst proctype NAME . $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)
	$$1 : .  (17)

	.  reduce 17

	$$1  goto 98


state 71
	vardcl : NAME .  (91)
	vardcl : NAME . ':' CONST  (92)
	vardcl : NAME . '[' const_expr ']'  (93)

	'['  shift 99
	':'  shift 100
	$end  reduce 91
	error  reduce 91
	C_CODE  reduce 91
	C_DECL  reduce 91
	C_STATE  reduce 91
	C_TRACK  reduce 91
	TYPEDEF  reduce 91
	INLINE  reduce 91
	SEMI  reduce 91
	ARROW  reduce 91
	FI  reduce 91
	OD  reduce 91
	SEP  reduce 91
	ACTIVE  reduce 91
	PROCTYPE  reduce 91
	D_PROCTYPE  reduce 91
	HIDDEN  reduce 91
	SHOW  reduce 91
	ISLOCAL  reduce 91
	TYPE  reduce 91
	UNAME  reduce 91
	CLAIM  reduce 91
	TRACE  reduce 91
	INIT  reduce 91
	LTL  reduce 91
	ASGN  reduce 91
	')'  reduce 91
	'}'  reduce 91
	','  reduce 91


state 72
	asgn : ASGN .  (72)

	.  reduce 72


state 73
	one_decl : vis TYPE asgn . '{' nlst '}'  (75)

	'{'  shift 101
	.  error


state 74
	one_decl : vis TYPE var_list .  (73)

	.  reduce 73


state 75
	var_list : ivar .  (82)
	var_list : ivar . ',' var_list  (83)

	','  shift 102
	$end  reduce 82
	error  reduce 82
	C_CODE  reduce 82
	C_DECL  reduce 82
	C_STATE  reduce 82
	C_TRACK  reduce 82
	TYPEDEF  reduce 82
	INLINE  reduce 82
	SEMI  reduce 82
	ARROW  reduce 82
	FI  reduce 82
	OD  reduce 82
	SEP  reduce 82
	ACTIVE  reduce 82
	PROCTYPE  reduce 82
	D_PROCTYPE  reduce 82
	HIDDEN  reduce 82
	SHOW  reduce 82
	ISLOCAL  reduce 82
	TYPE  reduce 82
	UNAME  reduce 82
	CLAIM  reduce 82
	TRACE  reduce 82
	INIT  reduce 82
	LTL  reduce 82
	')'  reduce 82
	'}'  reduce 82


state 76
	ivar : vardcl .  (86)
	ivar : vardcl . ASGN '{' c_list '}'  (87)
	ivar : vardcl . ASGN expr  (88)
	ivar : vardcl . ASGN ch_init  (89)

	ASGN  shift 103
	$end  reduce 86
	error  reduce 86
	C_CODE  reduce 86
	C_DECL  reduce 86
	C_STATE  reduce 86
	C_TRACK  reduce 86
	TYPEDEF  reduce 86
	INLINE  reduce 86
	SEMI  reduce 86
	ARROW  reduce 86
	FI  reduce 86
	OD  reduce 86
	SEP  reduce 86
	ACTIVE  reduce 86
	PROCTYPE  reduce 86
	D_PROCTYPE  reduce 86
	HIDDEN  reduce 86
	SHOW  reduce 86
	ISLOCAL  reduce 86
	TYPE  reduce 86
	UNAME  reduce 86
	CLAIM  reduce 86
	TRACE  reduce 86
	INIT  reduce 86
	LTL  reduce 86
	')'  reduce 86
	'}'  reduce 86
	','  reduce 86


state 77
	one_decl : vis UNAME var_list .  (74)

	.  reduce 74


state 78
	cstate : C_STATE STRING STRING STRING .  (50)

	.  reduce 50


state 79
	cstate : C_TRACK STRING STRING STRING .  (51)

	.  reduce 51


state 80
	utype : TYPEDEF NAME '{' $$7 . decl_lst '}'  (41)
	vis : .  (67)

	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	TYPE  reduce 67
	UNAME  reduce 67

	one_decl  goto 104
	decl_lst  goto 105
	vis  goto 34


state 81
	ns : INLINE nm l_par $$8 . args r_par  (45)
	args : .  (253)

	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	GET_P  shift 110
	PC_VAL  shift 111
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	CONST  shift 114
	NAME  shift 115
	PNAME  shift 116
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	')'  reduce 253

	l_par  goto 123
	args  goto 124
	cexpr  goto 125
	varref  goto 126
	expr  goto 127
	cmpnd  goto 128
	pfld  goto 129
	ltl_expr  goto 130
	arg  goto 131


state 82
	inst : ACTIVE '[' NAME ']' .  (25)

	.  reduce 25


state 83
	const_expr : '-' const_expr .  (170)
	const_expr : const_expr . '+' const_expr  (172)
	const_expr : const_expr . '-' const_expr  (173)
	const_expr : const_expr . '*' const_expr  (174)
	const_expr : const_expr . '/' const_expr  (175)
	const_expr : const_expr . '%' const_expr  (176)

	.  reduce 170


state 84
	const_expr : l_par const_expr . r_par  (171)
	const_expr : const_expr . '+' const_expr  (172)
	const_expr : const_expr . '-' const_expr  (173)
	const_expr : const_expr . '*' const_expr  (174)
	const_expr : const_expr . '/' const_expr  (175)
	const_expr : const_expr . '%' const_expr  (176)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	')'  shift 132
	.  error

	r_par  goto 133


state 85
	const_expr : const_expr '+' . const_expr  (172)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 134


state 86
	const_expr : const_expr '-' . const_expr  (173)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 135


state 87
	const_expr : const_expr '*' . const_expr  (174)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 136


state 88
	const_expr : const_expr '/' . const_expr  (175)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 137


state 89
	const_expr : const_expr '%' . const_expr  (176)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 138


state 90
	inst : ACTIVE '[' const_expr ']' .  (24)

	.  reduce 24


state 91
	claim : CLAIM optname $$5 body .  (33)

	.  reduce 33


state 92
	body : '{' $$9 . sequence OS $$10 '}'  (57)
	vis : .  (67)

	error  shift 139
	ASSERT  shift 140
	PRINT  shift 141
	PRINTM  shift 142
	C_CODE  shift 2
	C_DECL  shift 3
	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	SET_P  shift 143
	GET_P  shift 110
	PC_VAL  shift 111
	RETURN  shift 144
	GOTO  shift 145
	BREAK  shift 146
	ELSE  shift 147
	IF  shift 148
	DO  shift 149
	FOR  shift 150
	SELECT  shift 151
	ATOMIC  shift 152
	D_STEP  shift 153
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	FULL  shift 154
	EMPTY  shift 155
	NFULL  shift 156
	NEMPTY  shift 157
	CONST  shift 114
	XU  shift 158
	NAME  shift 159
	PNAME  shift 116
	INAME  shift 160
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	'{'  shift 161
	TYPE  reduce 67
	UNAME  reduce 67

	one_decl  goto 162
	l_par  goto 163
	full_expr  goto 164
	ccode  goto 165
	cexpr  goto 125
	sequence  goto 166
	step  goto 167
	stmnt  goto 168
	vis  goto 34
	varref  goto 169
	expr  goto 170
	cmpnd  goto 128
	pfld  goto 129
	Special  goto 171
	Stmnt  goto 172
	for_pre  goto 173
	ltl_expr  goto 130
	Expr  goto 174
	Probe  goto 175


state 93
	Opt_priority : PRIORITY CONST .  (221)

	.  reduce 221


state 94
	init : INIT $$3 Opt_priority body .  (27)

	.  reduce 27


state 95
	ltl_body : error .  (31)

	.  reduce 31


state 96
	ltl_body : '{' . full_expr OS '}'  (30)

	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	GET_P  shift 110
	PC_VAL  shift 111
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	FULL  shift 154
	EMPTY  shift 155
	NFULL  shift 156
	NEMPTY  shift 157
	CONST  shift 114
	NAME  shift 115
	PNAME  shift 116
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	.  error

	l_par  goto 163
	full_expr  goto 176
	cexpr  goto 125
	varref  goto 126
	expr  goto 170
	cmpnd  goto 128
	pfld  goto 129
	ltl_expr  goto 130
	Expr  goto 174
	Probe  goto 175


state 97
	ltl : LTL optname2 $$4 ltl_body .  (29)

	.  reduce 29


state 98
	proc : inst proctype NAME $$1 . l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	'('  shift 57
	.  error

	l_par  goto 177


state 99
	vardcl : NAME '[' . const_expr ']'  (93)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 178


state 100
	vardcl : NAME ':' . CONST  (92)

	CONST  shift 179
	.  error


state 101
	one_decl : vis TYPE asgn '{' . nlst '}'  (75)

	NAME  shift 180
	.  error

	nlst  goto 181


state 102
	var_list : ivar ',' . var_list  (83)

	NAME  shift 71
	.  error

	var_list  goto 182
	ivar  goto 75
	vardcl  goto 76


state 103
	ivar : vardcl ASGN . '{' c_list '}'  (87)
	ivar : vardcl ASGN . expr  (88)
	ivar : vardcl ASGN . ch_init  (89)

	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	GET_P  shift 110
	PC_VAL  shift 111
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	CONST  shift 114
	NAME  shift 115
	PNAME  shift 116
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	'['  shift 183
	'{'  shift 184
	.  error

	l_par  goto 123
	cexpr  goto 125
	varref  goto 126
	expr  goto 185
	ch_init  goto 186
	cmpnd  goto 128
	pfld  goto 129
	ltl_expr  goto 130


state 104
	decl_lst : one_decl .  (76)
	decl_lst : one_decl . SEMI decl_lst  (77)

	SEMI  shift 187
	')'  reduce 76
	'}'  reduce 76


state 105
	utype : TYPEDEF NAME '{' $$7 decl_lst . '}'  (41)

	'}'  shift 188
	.  error


state 106
	cexpr : C_EXPR .  (54)

	.  reduce 54


state 107
	expr : RUN . aname $$33 l_par args r_par Opt_priority  (201)

	NAME  shift 189
	PNAME  shift 190
	.  error

	aname  goto 191


state 108
	expr : LEN . l_par varref r_par  (202)

	'('  shift 57
	.  error

	l_par  goto 192


state 109
	expr : ENABLED . l_par expr r_par  (203)

	'('  shift 57
	.  error

	l_par  goto 193


state 110
	expr : GET_P . l_par expr r_par  (204)

	'('  shift 57
	.  error

	l_par  goto 194


state 111
	expr : PC_VAL . l_par expr r_par  (214)

	'('  shift 57
	.  error

	l_par  goto 195


state 112
	expr : TIMEOUT .  (212)

	.  reduce 212


state 113
	expr : NONPROGRESS .  (213)

	.  reduce 213


state 114
	expr : CONST .  (211)

	.  reduce 211


state 115
	pfld : NAME .  (95)
	pfld : NAME . $$12 '[' expr ']'  (97)
	$$12 : .  (96)
